# croftondescriptor

./: .gitignore  2kernelcall  Crofton.txt  README.md  Readme.dm  SG.txt  c0003.jpg.mat  codigoC++.txt  crofton.fig  croftonEXPORT.txt  improvebeta1  m-std.xlsx  sg.fig
apple_silicon_version/: CMakeLists.txt  CMakeLists_simple.txt  IMPROVEMENTS.md  METAL_OPTIMIZATION.md  MetalCapabilities.h  MetalCapabilities.mm  MetalImageProcessor.h  MetalImageProcessor.mm  README.md  TESTING.md  algorithm_comparison.txt  algorithm_demo  algorithm_demo.cpp  benchmark.py  build_instructions.md  crofton.metal  crofton_metal.mm  edge_detection_gui.py  image_processing.metal  image_processing_optimized.metal  json_output.h  main.mm  main_metal.cpp  main_metal_optimized.cpp  main_simple.cpp  metal_crofton_result.txt  metal_processor_wrapper.py  quality_validation.py  simple_crofton_result.txt  test_corrected_algorithm.py  test_metal_optimized.sh  test_request.json
apple_silicon_version/build_metal/: CMakeCache.txt  Makefile  cmake_install.cmake  crofton_metal
apple_silicon_version/image-shape-explorer/: README.md  index.html  package-lock.json  package.json
apple_silicon_version/image-shape-explorer/src/: App.tsx
apple_silicon_version/image-shape-explorer/src/components/: PanelParams.tsx  ResultCard.tsx
apple_silicon_version/image-shape-explorer/src/components/ui/: calendar.tsx  chart.tsx  command.tsx  hover-card.tsx  input-otp.tsx  input.tsx  menubar.tsx  navigation-menu.tsx  progress.tsx  separator.tsx  slider.tsx  table.tsx  tabs.tsx  toast.tsx  toggle.tsx  tooltip.tsx
apple_silicon_version/image-shape-explorer/src/pages/: Index.tsx  NotFound.tsx
apple_silicon_version/image-shape-explorer/src/workers/: opencvWorker.ts
cuda_version/: CLASSIFICATION_PLAN.md  CMakeLists.txt  README.md  VIDEO_TITLES.md  crofton_kernels.cu  crofton_log.txt  main  main.cu
cuda_version/results/chula/: RESULTS.md
cuda_version/results/conditions/: RESULTS.md
cuda_version/results/erythrocytesIDB/: RESULTS.md
cuda_version/webapp/: classify.py  cnn_baseline.py  condition_rules.json  conditions.py  conditions_eval.py  crofton_gpu.py  datasets.py  experiments.py  features.py  make_report.py  segmentation.py  server.py  validate_gpu.py
cuda_version/webapp/static/: index.html
cuda_version/webapp/tests/: test_features.py
image-shape-explorer/: README.md  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json
image-shape-explorer/src/: App.tsx  index.css
image-shape-explorer/src/components/: Dropzone.tsx  MetricsPanel.tsx  PanelParams.tsx  ResultCard.tsx
image-shape-explorer/src/components/ui/: accordion.tsx  alert-dialog.tsx  badge.tsx  breadcrumb.tsx  button.tsx  carousel.tsx  checkbox.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  pagination.tsx  popover.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  switch.tsx  textarea.tsx  toaster.tsx  toggle-group.tsx  use-toast.ts
image-shape-explorer/src/lib/: opencv.ts  store.ts
image-shape-explorer/src/pages/: Index.tsx  NotFound.tsx
versionplus/: CMakeLists.txt
